--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,7 +13,9 @@ services:
       - POSTGRES_PASSWORD=mypassword
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    command: ["postgres", "-c", "shared_buffers=128MB", "-c", "max_connections=30"]  # メモリ設定の追加
+    command: ["postgres", "-c", "shared_buffers=32MB", "-c", "max_connections=10", "-c", "work_mem=2MB", "-c", "maintenance_work_mem=16MB", "-c", "huge_pages=off"]
+     # メモリ設定の追加
+     # lightsailのメモリ設定は1GBのため、メモリ使用量を軽減する
 
   gunicorn:
     build: .
